not idea why it's back

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,7 @@
 name    = Dist-Zilla-Plugin-Repository
 version = 0.05
-author = Fayland Lam <fayland@gmail.com>, Ricardo SIGNES <rjbs@cpan.org>
+author = Fayland Lam <fayland@gmail.com>
+author = Ricardo SIGNES <rjbs@cpan.org>
 license = Perl_5
 copyright_holder = Fayland Lam, Ricardo SIGNES
 
