add another author, change date

--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,8 @@
 name    = Dist-Zilla-Plugin-Repository
-version = 0.08
+version = 0.09
 author = Fayland Lam <fayland@gmail.com>
 author = Ricardo SIGNES <rjbs@cpan.org>
+author =  Moritz Onken <onken@netcubed.de>
 license = Perl_5
 copyright_holder = Fayland Lam, Ricardo SIGNES
 
