--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ author = Fayland Lam <fayland@gmail.com>
 author = Ricardo SIGNES <rjbs@cpan.org>
 author = Moritz Onken <onken@netcubed.de>
 license = Perl_5
-copyright_holder = Fayland Lam, Ricardo SIGNES
+copyright_holder = Fayland Lam, Ricardo SIGNES, Moritz Onken
 
 [@Filter]
 bundle = @Classic
