Update dist.ini for newer dzil
  @Filter parameters should begin with -
  Prereq is now Prereqs

--- a/dist.ini
+++ b/dist.ini
@@ -7,11 +7,11 @@ license = Perl_5
 copyright_holder = Fayland Lam, Ricardo SIGNES, Moritz Onken
 
 [@Filter]
-bundle = @Classic
-remove = PodVersion
-remove = BumpVersion
+-bundle = @Classic
+-remove = PodVersion
+-remove = BumpVersion
 
-[Prereq]
+[Prereqs]
 Dist::Zilla = 4.102340
 
 [PodWeaver]
