--- a/dist.ini
+++ b/dist.ini
@@ -14,6 +14,13 @@ copyright_holder = Fayland Lam, Ricardo SIGNES, Moritz Onken
 [Prereqs]
 Dist::Zilla = 4.102340
 
+[Prereqs / TestRequires]
+Dist::Zilla::Tester = 4.102340
+Test::More          = 0.88 ; done_testing
+
+[MetaNoIndex]
+directory = t
+
 [PodWeaver]
 
 [PerlTidy]
