--- a/dist.ini
+++ b/dist.ini
@@ -3,6 +3,7 @@ version = 0.15
 author = Fayland Lam <fayland@gmail.com>
 author = Ricardo SIGNES <rjbs@cpan.org>
 author = Moritz Onken <onken@netcubed.de>
+author = Christopher J. Madsen
 license = Perl_5
 copyright_holder = Fayland Lam, Ricardo SIGNES, Moritz Onken
 
