--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,6 @@
+;				be kind to Emacs users -*-conf-windows-*-
 name    = Dist-Zilla-Plugin-Repository
-version = 0.15
+version = 0.16
 author = Fayland Lam <fayland@gmail.com>
 author = Ricardo SIGNES <rjbs@cpan.org>
 author = Moritz Onken <onken@netcubed.de>
@@ -19,6 +20,7 @@ Dist::Zilla = 4.102340
 Dist::Zilla::Tester = 4.102340
 Test::More          = 0.88 ; done_testing
 
+[MetaJSON]
 [MetaNoIndex]
 directory = t
 
