--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ version = 0.16
 author = Fayland Lam <fayland@gmail.com>
 author = Ricardo SIGNES <rjbs@cpan.org>
 author = Moritz Onken <onken@netcubed.de>
-author = Christopher J. Madsen
+author = Christopher J. Madsen <perl@cjmweb.net>
 license = Perl_5
 copyright_holder = Fayland Lam, Ricardo SIGNES, Moritz Onken
 
