--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,7 @@ author = Ricardo SIGNES <rjbs@cpan.org>
 author = Moritz Onken <onken@netcubed.de>
 author = Christopher J. Madsen <perl@cjmweb.net>
 license = Perl_5
-copyright_holder = Fayland Lam, Ricardo SIGNES, Moritz Onken
+copyright_holder = Fayland Lam, Ricardo SIGNES, Moritz Onken, Christopher J. Madsen
 
 [@Filter]
 -bundle = @Classic
