Added missing prereq Moose as suggested by CPANTS.

--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,7 @@ copyright_holder = Fayland Lam, Ricardo SIGNES, Moritz Onken, Christopher J. Mad
 
 [Prereqs]
 Dist::Zilla = 4.102340
+Moose = 0
 
 [Prereqs / TestRequires]
 Dist::Zilla::Tester = 4.102340
