Auto generate minimum perl version as suggested by CPANTS.

--- a/dist.ini
+++ b/dist.ini
@@ -21,6 +21,7 @@ Dist::Zilla::Tester = 4.102340
 Test::More          = 0.88 ; done_testing
 
 [MetaJSON]
+[MinimumPerlFast]
 [MetaNoIndex]
 directory = t
 
